# LaTeXSnipper

./: .coveragerc  .deps_state.json  .editorconfig  .gitattributes  .gitignore  .pylintrc  =6  FINAL_STABLE_RELEASE.md  LICENSE  LaTeXSnipper-linux-offline.spec  LaTeXSnipper-linux.spec  LaTeXSnipper-macos.spec  LaTeXSnipper.offline.spec  LaTeXSnipper.spec  MANIFEST.in  PRIVACY.md  README.zh-CN.md  README_MATHCRAFT_OCR.md  RELEASE_NOTES_TAURI_CLIENT_v0.1.0.md  RELEASE_NOTES_v1.02.md  RELEASE_NOTES_v1.03.md  RELEASE_NOTES_v1.04.md  RELEASE_NOTES_v1.05.md  RELEASE_NOTES_v1.06.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.1.md  RELEASE_NOTES_v2.2.1.md  RELEASE_NOTES_v2.2.md  RELEASE_NOTES_v2.2_beta.md  RELEASE_NOTES_v2.3.md  TECH_PLAN_v2.0.md  TECH_PLAN_v2.1_HANDWRITING.md  TECH_PLAN_v2.2_EXTERNAL_MODEL.md  __init__.py  assets_util.py  capture_overlay.py  compat_messagebox.py  config.py  constants.py  deps_bootstrap.py  (+24 more)
.claude/: settings.local.json
.github/: CODEOWNERS
Inno/: latexsnipper-office-addin.iss  latexsnipper.iss  latexsnipper_offline.iss
User_Manual/: User_Manual.typ
apps/tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-client/src-tauri/capabilities/: default.json
apps/tauri-client/src-tauri/src/: commands.rs  contract.rs  main.rs  rpc_client.rs  window_effects.rs
contracts/: daemon_rpc_contract.v1.json  events.v1.json
docs/: MathCraft_OCR_Design.md  PHASE0_REGRESSION.md  PHASE1_DAEMON.md  PHASE2_RPC_CONTRACT.md  developer_code_standards.md  faq.md  latexsnip_txstudio_intro.md  mathcraft_ocr_literature_data_inventory.md  需求方案.md  (+10 more)
(+720 files in other folders)
